Сверстал верхнее меню сайта

--- a/index.html
+++ b/index.html
@@ -17,5 +17,21 @@
         </div>
         <div class="clear"></div>
     </div>
+
+    <div id="top-menu">
+        <div id="inner-menu">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Articles</a></li>
+                <li><a href="#">Tech</a></li>
+                <li><a href="#">Business</a></li>
+                <li><a href="#">Entertaiment</a></li>
+                <li><a href="#">Social</a></li>
+                <li><a href="#">Media</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
