--- a/index.html
+++ b/index.html
@@ -198,12 +198,84 @@
                 </div>
             </div>
 
-
-
+            <div id="pagination">
+                <ul>
+                    <li><a href="#" class="current">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li><a href="#">6</a></li>
+                    <li><a href="#">7</a></li>
+                    <li><a href="#">8</a></li>
+                    <li><a href="#">9</a></li>
+                    <li><a href="#">10</a></li>
+                    <li><a href="#">11</a></li>
+                    <li><a href="#" class="next">&raquo;</a></li>
+                    <li><a href="#">25</a></li>
+                    
+                </ul>
+            </div>
 
         </div>
 
         <div class="clear"></div>
+    </div>
+
+    <div id="footer">
+        <div id="footer-top"></div>
+        <div id="footer-middle">
+            <div id="middle-content">
+                <div class="footer-box">
+                    <div id="magazine">
+                        <p>Ride Magazine was founded in 2012. </p>
+                        <p>Ride Magazine is a full service Web Design, 
+                            Marketing and Advertising Company geared to help 
+                            small to medium size businesses create a plan to 
+                            succeed. Form Graphics, Print (Display ad, 
+                            brochures, etc.), Internet research &amp; Marketing 
+                            and Web Site Design and Development, High 
+                            Magazine can do it all for you.</p>
+                        <p>Our mission is to serve our clients big or small with 
+                            the same passion, integrity, loyalty and 
+                            effectiveness, without the high expense normally 
+                            associated with these types of services.</p>
+                    </div>
+                </div>
+                <div class="footer-box">
+                    <div id="recent-posts">
+                        <h3><span>Recent Posts</span></h3>
+                        <ul>
+                            <li><a href="#">TVGuide.com Watchlist Predicts Fall TV Shows’ Success</a></li>
+                            <li><a href="#">7 Ways to Create a Memorable Customer Experience With Social Media</a></li>
+                            <li><a href="#">Apple Gives Its Key Execs $400 Million in Bonuses</a></li>
+                            <li><a href="#">How 5 Tech Giants Are Giving Back to Education</a></li>
+                            <li><a href="#">Battlefield 3 Has Record Opening Weekend Despite Tech Woes</a></li>
+                            <li><a href="#">The Evolving Role of Social Media in  News Organizations [LIVE Q&mp;A]</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-box" id="footer-box">
+                    <div id="archives">
+                        <h3><span>Our Archives</span></h3>
+                        <ul>
+                            <li><a href="#">March 2011</a></li>
+                            <li><a href="#">February 2011</a></li>
+                            <li><a href="#">January 2011</a></li>
+                            <li><a href="#">December 2010</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="clear"></div>
+            </div>
+        </div>
+        <div id="footer-bottom">
+            <div id="bottom-content">
+                <p class="left">Copyright &copy; 2011 <a href="#">Ride Magazine</a> All Rights Reserved.</p>
+                <p class="right">Powered by <a href="#">WordPress</a> - Designed &amp; Developed By <a href="#">Mahdi El Hanafi</a>.</p>
+                <div class="clear"></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
